--- a/web/login.html
+++ b/web/login.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login | Posto de Saúde</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Administrador</title>
 </head>
-
 <body>
 
-  <div class="login-container">
+    <h1>Página de Login do Administrador</h1>
 
-    <h1>Login</h1>
-    <form id="loginForm">
-      <input type="email" id="email" placeholder="E-mail" required />
-      <input type="password" id="senha" placeholder="Senha" required />
-      <button type="submit">Entrar</button>
+    <form id="login-form">
+        <div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Digite seu email" required>
+        </div>
+        <br>
+        <div>
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
+        </div>
+        <br>
+        <button type="submit" id="submit-button">Entrar</button>
     </form>
 
     <p id="erro" style="color: red;"></p>
-    <p id="erroLogin" style="color: red; display: none;">Login inválido</p>
 
-  </div>
+    <script type="module" src="login.js"></script>
 
-  <script type="module" src="login.js"></script>
-
-  
 </body>
 </html>
